# prowlarr-indexer-report

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SECURITY.md  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: release-please.yml  release.yml  security.yml  test.yml
app/: config.py  main.py  prowlarr.py
app/static/: app.js  index.html
dev/: mock_server.py
tests/: test_report.py
